# fcitx5-tmux

./: CMakeLists.txt  README.md  fcitx5-tmux.kdev4  fcitx5.tmux.in
src/: CMakeLists.txt  main.cpp
